--- a/Day-02/index.html
+++ b/Day-02/index.html
@@ -70,7 +70,7 @@
         <i class="fa-solid fa-hammer fa-2xl"></i>
         <p>Repair</p>
       </div>
-      <div class="box">
+      <div class="box active">
         <i class="fa-solid fa-house-laptop fa-2xl"></i>
         <p>Improve</p>
       </div>
